@@ -7,6 +7,10 @@ We renamed the following functions:
   Context.Rel.Declaration.fold   -> Context.Rel.Declaration.fold_constr
   Context.Named.Declaration.fold -> Context.Named.Declaration.fold_constr
 
+The following type aliases where removed
+
+  Context.section_context    ... it was just an alias for "Context.Named.t" which is still available
+
 =========================================
 = CHANGES BETWEEN COQ V8.5 AND COQ V8.6 =
 =========================================
